<resources>
    <string name="app_name">taskmaster</string>
    <string name="taskmaster">TaskMaster</string>
    <string name="add_task">Add Task</string>
    <string name="my_task">My Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>