...
            android:layout_height="wrap_content"
            android:text="Green" />

    </RadioGroup>

    <Button
        android:id="@+id/login_button"
        android:layout_width="118dp"
        android:layout_height="55dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="108dp"
        android:text="Select a team"
        app:layout_constraintEnd_toEndOf="parent"
...
